// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldValueToggleFilter render - active 1`] = `
<EuiFilterButton
  aria-pressed={true}
  color="text"
  grow={true}
  hasActiveFilters={true}
  iconSide="right"
  onClick={[Function]}
  type="button"
>
  Kibana
</EuiFilterButton>
`;

exports[`FieldValueToggleFilter render - active negated - custom negated name 1`] = `
<EuiFilterButton
  aria-pressed={true}
  color="text"
  grow={true}
  hasActiveFilters={true}
  iconSide="right"
  onClick={[Function]}
  type="button"
>
  Others
</EuiFilterButton>
`;

exports[`FieldValueToggleFilter render - active negated 1`] = `
<EuiFilterButton
  aria-pressed={true}
  color="text"
  grow={true}
  hasActiveFilters={true}
  iconSide="right"
  onClick={[Function]}
  type="button"
>
  Not Kibana
</EuiFilterButton>
`;

exports[`FieldValueToggleFilter render 1`] = `
<EuiFilterButton
  aria-pressed={false}
  color="text"
  grow={true}
  hasActiveFilters={false}
  iconSide="right"
  onClick={[Function]}
  type="button"
>
  Kibana
</EuiFilterButton>
`;
